--- a/compare_support.html
+++ b/compare_support.html
@@ -11,7 +11,7 @@
 		},
 		inputs:1,
 		outputs:1,
-		icon: "PCS_Modular.svg",
+		icon: "CPU.svg",
 		label: function() {
 			return this.name? "Compare Support - " + this.name: "Compare Support";
 		},
@@ -53,7 +53,7 @@
 
 <style>
 	label{
-		width: 50% !important;
+		width: 100% !important;
 		margin-bottom: 2px !important;
 	}
 
@@ -70,7 +70,7 @@
 	.hr-div-compare{
 		display: flex !important;
 		justify-content: space-between !important;
-		margin-top: 250px !important;
+		/* margin-top: 250px !important; */
 	}
 
 	.optional{
@@ -81,13 +81,94 @@
 	.descript{
 		text-align: center;
 	}
+	
+	.columm-50{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 50% !important;
+        float: left !important;
+    }
+
+    .columm-30{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 30% !important;
+        float: left !important;
+    }
+
+
+    .columm-70{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 70% !important;
+        float: left !important;
+    }
+
+    hr {
+    width: 40% !important;
+    float: left !important;
+    }
+
+    .hr-div-get{
+        display: flex !important;
+        justify-content: space-between !important;
+        margin-top: 250px !important;
+    }
+
+    .optional{
+        height: max-content !important;
+        margin-top: 10px !important;
+    }
+
+    .descript{
+        text-align: center;
+    }
+
+
+    .descript-div{
+        max-width: 444px !important;
+    }
+
+    span.red-ui-typedInput-type-label {
+    /* background: chartreuse; */
+    /* display: block; */
+    width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    }
+
+    .btn-aln{
+        display: flex !important;
+        flex-direction: row-reverse !important;
+        /* padding-left: 30px; */
+        align-content: center;
+        align-items: flex-end;
+    }
 </style>
 
 <script type="text/html" data-template-name="compare_support">
-	<div class="form-row columm">
+	<div class="form-row columm descript-div">
 		<strong class="descript">
 			Makes the rest of the comparisons adjacent to the “get command message”.
-	</strong>
+		</strong>
+	</div>
+
+	<div style=" position: relative; display:flex;">
+        <div class="form-row columm-70">
+            <label style="width: 50% !important;" for="node-input-name" ><i class="fa fa-tag"></i> Identification Note</label>
+            <input type="text" id="node-input-name" placeholder="Name" style="width: 100%">
+        </div>
+        <!-- <div class="form-row columm-30" style="align-items: flex-end !important;">
+            <label style="width: max-content !important; padding-right: 24px;"><i class="fa fa-list-ul"></i> Item</label>
+            <div class="form-row btn-aln" >
+                <a id="addSetPhase" class="red-ui-button" ><i class="fa fa-plus"></i></a>
+                <a id="remSetPhase" class="red-ui-button" style="margin-right: 5px;" ><i class="fa fa-minus"></i></a>
+            </div>
+        </div> -->
+	</div>
+	<div class="hr-div-compare">
+		<hr>Compare<hr>
 	</div>
 	<div class="form-row columm">
 		<label style="width: auto" for="node-input-compare_select"><i class="fa fa-list"></i> Comparison Type:</label>
@@ -111,19 +192,19 @@
 			<div class="node-input-min-value" style="display: none; width: min-content; float: left; margin-right: 40px;">
 				<div class="columm">
 					<label for="node-input-minValue" style="width: max-content !important;"><i class="fa fa-minus-circle"></i> Minimum Value: </label>
-					<input type="number" id="node-input-minValue" style=" width:70px !important ">
+					<input type="number" id="node-input-minValue" style=" width:100px !important ">
 				</div>
 			</div>
 			<div class="node-input-max-value" style="display: none;">
 				<div class="columm">
-					<label for="node-input-maxValue" style="width: max-content !important"><i class="fa fa-plus-circle"></i>Maximum Value: </label>
-					<input type="number" id="node-input-maxValue" style=" width:70px !important ">
+					<label for="node-input-maxValue" style="width: max-content !important"><i class="fa fa-plus-circle"></i> Maximum Value: </label>
+					<input type="number" id="node-input-maxValue" style=" width:100px !important ">
 				</div>
 			</div>
 		</div>
 		
 	</div>
-	<div class="hr-div-compare">
+	<!-- <div class="hr-div-compare">
 		<hr>
 			<span class="optional">Optional</span>
 		<hr>
@@ -131,7 +212,7 @@
 	<div class="form-row columm">
 		<label style="width: 50% !important;" for="node-input-name" ><i class="fa fa-tag"></i> Component Nickname</label>
 		<input type="text" id="node-input-name" placeholder="Name">
-	</div>
+	</div> -->
 </script>
 
 <script type="text/html" data-help-name="compare_support">
